Added information about card rarity in obtaining player data
