# docs/swagger.json
@@ -250,6 +250,12 @@
                 "summary": "Получение списка игроков",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "profileID",
+                        "name": "profileID",
+                        "in": "query"
+                    },
+                    {
                         "type": "array",
                         "description": "teams",
                         "name": "teams",
@@ -750,7 +756,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TournamentRosterResponse"
+                            "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.TournamentRosterResponse"
                         }
                     },
                     "400": {
@@ -1185,6 +1191,9 @@
         "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PlayerResponse": {
             "type": "object",
             "properties": {
+                "cardRarity": {
+                    "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_store.CardRarity"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1208,6 +1217,10 @@
                 },
                 "positionName": {
                     "type": "string"
+                },
+                "rarityName": {
+                    "type": "string",
+                    "default": "Default"
                 },
                 "sweaterNumber": {
                     "type": "integer"
@@ -1234,6 +1247,57 @@
                 "Defensemen",
                 "Forward"
             ]
+        },
+        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PositionData": {
+            "type": "object",
+            "properties": {
+                "positionAbbrev": {
+                    "type": "string"
+                },
+                "positionName": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.TeamData": {
+            "type": "object",
+            "properties": {
+                "teamAbbrev": {
+                    "type": "string"
+                },
+                "teamID": {
+                    "type": "integer"
+                },
+                "teamName": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.TournamentRosterResponse": {
+            "type": "object",
+            "properties": {
+                "players": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PlayerResponse"
+                    }
+                },
+                "positions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PositionData"
+                    }
+                },
+                "teams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.TeamData"
+                    }
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
         },
         "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_store.BonusMetric": {
             "type": "integer",
@@ -1343,31 +1407,6 @@
                 }
             }
         },
-        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.PositionData": {
-            "type": "object",
-            "properties": {
-                "positionAbbrev": {
-                    "type": "string"
-                },
-                "positionName": {
-                    "type": "string"
-                }
-            }
-        },
-        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TeamData": {
-            "type": "object",
-            "properties": {
-                "teamAbbrev": {
-                    "type": "string"
-                },
-                "teamID": {
-                    "type": "integer"
-                },
-                "teamName": {
-                    "type": "string"
-                }
-            }
-        },
         "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.Tournament": {
             "type": "object",
             "properties": {
@@ -1403,32 +1442,6 @@
                 },
                 "tournamentId": {
                     "type": "integer"
-                }
-            }
-        },
-        "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TournamentRosterResponse": {
-            "type": "object",
-            "properties": {
-                "players": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.PlayerResponse"
-                    }
-                },
-                "positions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.PositionData"
-                    }
-                },
-                "teams": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.TeamData"
-                    }
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         },
